# Gopher-Server-Cross-Platform

./: CMakeLists.txt  README.md  gopher_log_file.txt  gopher_server_configuration.txt  main.c  main2.c  main_HandleRequest.c  main_LogProcess.c  selectDownload.c  stressCurl.sh
general/include/: config_file.h  definitions.h  files_interaction.h  linux_pipe.h  memory_mapping.h  portables.h  protocol.h  socket.h  ut_dict.h  utils.h
general/lib/: linux_pipe.c
general/lib/gopher/: protocol.c
general/lib/io/: config_file.c  files_interaction.c
general/lib/memory_mapping/: memory_mapping.c
general/lib/portable/: portables.c
general/lib/socket/: socket.c
general/lib/utils/: utils.c
linux/include/: gopher_server_configuration_linux.h  linux_dict.h  linux_files_interaction.h  linux_memory_mapping.h  linux_portable_lib.h  linux_process.h  linux_protocol.h  linux_signals.h  linux_socket.h  linux_thread.h  utils.h
linux/lib/io/: gopher_server_configuration_linux.c  linux_files_interaction.c
linux/lib/memory_mapping/: linux_memory_mapping.c
linux/lib/pipe/: linux_pipe.c
linux/lib/process/: linux_process.c
linux/lib/protocol/: linux_protocol.c
linux/lib/signals/: linux_signals.c
linux/lib/socket/: linux_socket.c
linux/lib/thread/: linux_thread.c
linux/lib/utils/: linux_portable_lib.c  utils.c
windows/: keep.sh
windows/include/: winThread.h  windows_events.h  windows_file_interactions.h  windows_memory_mapping.h  windows_pipe.h  windows_protocol.h  windows_socket.h  windows_utils.h
windows/lib/events/: windows_events.c
windows/lib/io/: windows_file_interactions.c
windows/lib/memory_mapping/: windows_memory_mapping.c
windows/lib/pipe/: windows_pipe.c
windows/lib/protocol/: windows_protocol.c
windows/lib/socket/: windows_socket.c
windows/lib/thead/: winThread.c
windows/lib/utils/: windows_utils.c
windows/pipe/: windows_pipe.c
